--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <body>
     <header></header>
     <main>
-      <h1>HOLA, como te va?  </h1>
+      <h1>HOLA, como te va?, otros cambios que se van a subir  </h1>
     </main>
     <footer></footer>
     <script src="index.js" type="module"></script>
